# Advent2025

./: .gitignore  pyproject.toml  requirements.txt
data/test/: .gitignore
src/: day0.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.py  utilities.py
tests/: test_day1.py  test_day10.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
